--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -128,10 +128,15 @@
             android:layout_height="wrap_content"
             android:text="进入测试界面"/>
         <Button
-            android:id="@+id/position_activity_button"
+            android:id="@+id/return_back_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="进入位置设置界面"/>
+            android:text="返回"/>
+        <!--<Button-->
+            <!--android:id="@+id/position_activity_button"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="进入位置设置界面"/>-->
     </LinearLayout>
 
     <LinearLayout
