--- a/app/src/main/res/layout/activity_setting_test.xml
+++ b/app/src/main/res/layout/activity_setting_test.xml
@@ -180,6 +180,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="关门加热" />
+        <Button
+            android:id="@+id/return_back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="返回" />
+
 
     </LinearLayout>
 </LinearLayout>
