--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -92,7 +92,8 @@
             android:id="@+id/floor_no"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:text="0" />
+            android:hint="请输入层数(1-6)"
+            android:text=""/>
 
         <Button
             android:id="@+id/confirm_floor_no"
