--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="green_1">#8FC31F</color>
+    <color name="red_light">#ff0000</color>
+    <color name="red">#B6203B</color>
+    <color name="black">#000000</color>
 </resources>
